{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 393,
  "lineage": "5e9d3dfe-f98f-b5a1-d64c-60161150ccb6",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-control-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/networkInterfaces/nic-control-01",
            "internal_domain_name_suffix": "c5txu213ivauppq1tralft1ukc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/publicIPAddresses/test-ip-control-01",
                "subnet_id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/virtualNetworks/test-vertual-net/subnets/test-subnet-01"
              }
            ],
            "location": "eastus",
            "name": "nic-control-01",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "test-group",
            "tags": {
              "environment": "test-demo"
            }
          },
          "dependencies": [
            "azurerm_public_ip.test-ip-control-01",
            "azurerm_resource_group.test-group",
            "azurerm_subnet.test-subnet-01",
            "azurerm_virtual_network.test-virtual-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-worker-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/networkInterfaces/nic-worker-01",
            "internal_domain_name_suffix": "c5txu213ivauppq1tralft1ukc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/publicIPAddresses/test-ip-worker-01",
                "subnet_id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/virtualNetworks/test-vertual-net/subnets/test-subnet-01"
              }
            ],
            "location": "eastus",
            "name": "nic-worker-01",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "test-group",
            "tags": {
              "environment": "test-demo"
            }
          },
          "dependencies": [
            "azurerm_public_ip.test-ip-worker-01",
            "azurerm_resource_group.test-group",
            "azurerm_subnet.test-subnet-01",
            "azurerm_virtual_network.test-virtual-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "test-control-sg-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/networkSecurityGroups/test-control-sg-01",
            "location": "eastus",
            "name": "test-control-sg-01",
            "resource_group_name": "test-group",
            "security_rule": [],
            "tags": {
              "environment": "test-demo"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "6443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/networkSecurityGroups/test-control-sg-01/securityRules/AllowInboundTCP6443",
            "name": "AllowInboundTCP6443",
            "network_security_group_name": "test-control-sg-01",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "test-group",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.test-control-sg-01",
            "azurerm_resource_group.test-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "2379-2380",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/networkSecurityGroups/test-control-sg-01/securityRules/AllowInboundTCP2379-2380",
            "name": "AllowInboundTCP2379-2380",
            "network_security_group_name": "test-control-sg-01",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "test-group",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.test-control-sg-01",
            "azurerm_resource_group.test-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "10250",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/networkSecurityGroups/test-control-sg-01/securityRules/AllowInboundTCP10250",
            "name": "AllowInboundTCP10250",
            "network_security_group_name": "test-control-sg-01",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "test-group",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.test-control-sg-01",
            "azurerm_resource_group.test-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule-04",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "10259",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/networkSecurityGroups/test-control-sg-01/securityRules/AllowInboundTCP10259",
            "name": "AllowInboundTCP10259",
            "network_security_group_name": "test-control-sg-01",
            "priority": 103,
            "protocol": "Tcp",
            "resource_group_name": "test-group",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.test-control-sg-01",
            "azurerm_resource_group.test-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule-05",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "10257",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/networkSecurityGroups/test-control-sg-01/securityRules/AllowInboundTCP10257",
            "name": "AllowInboundTCP10257",
            "network_security_group_name": "test-control-sg-01",
            "priority": 104,
            "protocol": "Tcp",
            "resource_group_name": "test-group",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.test-control-sg-01",
            "azurerm_resource_group.test-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule-06",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3000-32767",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/networkSecurityGroups/test-control-sg-01/securityRules/AllowInboundTCP3000-32767",
            "name": "AllowInboundTCP3000-32767",
            "network_security_group_name": "test-control-sg-01",
            "priority": 105,
            "protocol": "Tcp",
            "resource_group_name": "test-group",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.test-control-sg-01",
            "azurerm_resource_group.test-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule-07",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/networkSecurityGroups/test-control-sg-01/securityRules/AllowInboundTCP22",
            "name": "AllowInboundTCP22",
            "network_security_group_name": "test-control-sg-01",
            "priority": 106,
            "protocol": "Tcp",
            "resource_group_name": "test-group",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.test-control-sg-01",
            "azurerm_resource_group.test-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "test-ip-control-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/publicIPAddresses/test-ip-control-01",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "test-ip-control-01",
            "resource_group_name": "test-group",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "test-demo"
            }
          },
          "dependencies": [
            "azurerm_resource_group.test-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "test-ip-worker-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/publicIPAddresses/test-ip-worker-01",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "test-ip-worker-01",
            "resource_group_name": "test-group",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "test-demo"
            }
          },
          "dependencies": [
            "azurerm_resource_group.test-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "test-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/virtualNetworks/test-vertual-net/subnets/test-subnet-01",
            "name": "test-subnet-01",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "test-group",
            "virtual_network_name": "test-vertual-net"
          },
          "dependencies": [
            "azurerm_resource_group.test-group",
            "azurerm_virtual_network.test-virtual-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "test-sga-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/virtualNetworks/test-vertual-net/subnets/test-subnet-01",
            "network_security_group_id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/networkSecurityGroups/test-control-sg-01",
            "subnet_id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/virtualNetworks/test-vertual-net/subnets/test-subnet-01"
          },
          "dependencies": [
            "azurerm_network_security_group.test-control-sg-01",
            "azurerm_resource_group.test-group",
            "azurerm_subnet.test-subnet-01",
            "azurerm_virtual_network.test-virtual-net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "test-virtual-net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "737ae717-457d-4741-be1b-9c40b2cf7452",
            "id": "/subscriptions/4cfc7b54-c1c5-4ab5-ac41-ce0b11aeecfd/resourceGroups/test-group/providers/Microsoft.Network/virtualNetworks/test-vertual-net",
            "location": "eastus",
            "name": "test-vertual-net",
            "resource_group_name": "test-group",
            "tags": {
              "environment": "test-demo"
            }
          },
          "dependencies": [
            "azurerm_resource_group.test-group"
          ]
        }
      ]
    }
  ]
}